# agriproject

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/ai/disease_model/: __init__.py  model.py  train.py
app/ai/rag/: vectorstore.py
app/alembic/: env.py
app/api/endpoints/: voice.py  weather.py
app/core/: middleware.py
app/db/: session.py
app/db/models/: __init__.py  query.py  user.py
app/schemas/: weather.py  youtube.py
app/services/: market_service.py  youtube_service.py
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/core/: exceptions.py  logging_config.py
backend/app/schemas/: __init__.py  chat.py  disease.py  market.py  schemes.py  voice.py
backend/app/services/: chat_service.py  disease_service.py  schemes_service.py  voice_service.py  weather_service.py
backend/data/knowledge_base/: crops.md  diseases.md
backend/tests/: conftest.py
data/knowledge_base/: farming_practices.md  government_schemes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/i18n/: translations.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ChatPage.tsx  DiseasePage.tsx  LandingPage.tsx  MarketPage.tsx  SchemesPage.tsx  WeatherPage.tsx  YouTubePage.tsx
frontend/src/services/: apiClient.ts  chatApi.ts  diseaseApi.ts  (+5 more)
scripts/: ingest_knowledge.py  seed_data.py
tests/: test_api.py
(+8 files in other folders)
